<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="49dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:src="@drawable/img_register"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="PROFILE"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square" />
            <ScrollView
                android:layout_below="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:id="@+id/relativeLayout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imgView_userIcon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@color/colorPrimary"
                            android:padding="8dp"
                            android:src="@drawable/img_user"
                            app:tint="@color/white" />

                        <EditText
                            android:id="@+id/etUsername"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/editTextBG"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:paddingLeft="20dp"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:id="@+id/relativeLayout4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/relativeLayout1"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="15dp">

                        <ImageView
                            android:id="@+id/imgView_emailIcon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@color/colorPrimary"
                            android:padding="8dp"
                            android:src="@drawable/img_email"
                            app:tint="@color/white" />

                        <EditText
                            android:id="@+id/etEmail"
                            android:inputType="textEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/editTextBG"
                            android:hint="@string/email"
                            android:paddingLeft="20dp"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:id="@+id/relativeLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/relativeLayout4"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="15dp">

                        <ImageView
                            android:id="@+id/imgView_passwordIcon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@color/colorPrimary"
                            android:padding="8dp"
                            android:src="@drawable/img_register"
                            app:tint="@color/white" />

                        <EditText
                            android:id="@+id/etDepartment"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/editTextBG"
                            android:hint="@string/department"
                            android:inputType="textPersonName"
                            android:paddingLeft="20dp"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:id="@+id/relativeLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/relativeLayout2"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="15dp">

                        <ImageView
                            android:id="@+id/imgView_repasswordIcon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@color/colorPrimary"
                            android:padding="8dp"
                            android:src="@drawable/img_register"
                            app:tint="@color/white" />

                        <EditText
                            android:id="@+id/etYear"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/editTextBG"
                            android:hint="@string/year"
                            android:inputType="textPersonName"
                            android:paddingLeft="20dp"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:id="@+id/relativeLayout5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/relativeLayout3"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="15dp">

                        <ImageView
                            android:id="@+id/imgView_MobileIcon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@color/colorPrimary"
                            android:padding="8dp"
                            android:src="@drawable/img_mobile"
                            app:tint="@color/white" />

                        <EditText
                            android:id="@+id/etMobile"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/editTextBG"
                            android:hint="@string/mobile_hint"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:paddingLeft="20dp"
                            android:textSize="15sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginBottom="30dp"
                        android:orientation="horizontal"
                        android:id="@+id/relativeLayout6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/relativeLayout5"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="15dp">

                        <ImageView
                            android:id="@+id/imgView_AddressIcon"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@color/colorPrimary"
                            android:padding="8dp"
                            android:src="@drawable/img_register"
                            app:tint="@color/white" />

                        <EditText
                            android:id="@+id/etAddress"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@color/editTextBG"
                            android:hint="@string/enter_address"
                            android:inputType="textMultiLine"
                            android:paddingLeft="20dp"
                            android:textSize="15sp" />

                    </LinearLayout>





                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>